# robinhood-agentic-trading

./: .env.example  .gitignore  README.md  pyproject.toml
config/: default.json
src/agentic_trader/: __init__.py  cli.py  config.py  data.py  engine.py  execution.py  journal.py  logging_utils.py  models.py  notifications.py  risk.py  state.py  strategy.py
tests/: run_tests.py  test_risk.py
