[project]
name = "robinhood-agentic-trading"
version = "0.1.0"
description = "Dry-run-first agentic trading system with hard risk guardrails and Robinhood MCP integration boundary."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
trader = "agentic_trader.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
